--- a/Modding/lib/l10n/app_es.arb
+++ b/Modding/lib/l10n/app_es.arb
@@ -1,158 +1,256 @@
 {
-    "@@locale": "es",
-    "author_of_this_locale": "JNR",
-    "en": "English",
-    "vi": "Tiếng Việt",
-    "es": "Español",
-    "ru": "Pусский",
-    "not_specified": "No especificado",
-    "default_setting": "Ajustes visuales",
-    "theme": "Tema",
-    "language": "Lenguaje",
-    "author": "Traductor",
-    "application_setting": "Ajustes de la herramienta",
-    "send_notification": "Recibir notificaciones",
-    "storage_permission": "Uso del almacenamiento",
-    "granted": "Permitido",
-    "denied": "No permitido",
-    "toolchain": "Carpeta de herramientas",
-    "upload_directory": "Cambiar directorio",
-    "enable": "Activar",
-    "disable": "Desactivar",
-    "okay": "Aceptar",
-    "system": "Sistema",
-    "light": "Claro",
-    "dark": "Oscuro",
-    "js_page": "Scripts de JS",
-    "home": "Inicio",
-    "settings": "Ajustes",
-    "shell": "Shell",
-    "shell_description": "Útil para procesar archivos",
-    "method_picker": "Seleccionar método",
-    "method_picker_description": "Seleccione un método",
-    "js_execute": "Ejecutar JS",
-    "js_execute_description": "Ejecuta scripts de JS",
-    "animation_viewer": "Visor de animaciones",
-    "animation_viewer_description": "Previsualiza animaciones que el juego reproducirá",
-    "toolchain_is_invalid": "La carpeta de herramientas no es válida",
-    "user_provided": "EL usuario ingresó:",
-    "execute_again": "¿Ejecutar de nuevo?",
-    "yes": "Sí",
-    "no": "No",
-    "elapsed_time": "Tiempo transcurrido",
-    "upload_file": "Subir archivo",
-    "recent_files": "Archivos recientes",
-    "cancel": "Cancelar",
-    "invalid_request": "Solicitud no válida",
-    "shell_request_behavior": "Espere a que se terminen los procesos",
-    "android_request": "Solicitud de Android",
-    "android_storage_access_permission_required": "Se requiere permiso de almacenamiento para crear o abrir archivos",
-    "go_to_settings": "Ir a Ajustes",
-    "shell_has_finished": "Se ha finalizado el proceso, ¡regrese a la aplicación!",
-    "use": "Usar",
-    "select_option": "Opciones",
-    "submit": "Subir",
-    "x": "X",
-    "y": "Y",
-    "label": "Etiqueta",
-    "media": "Media",
-    "sprite": "Sprite",
-    "image": "Imagen",
-    "upload_media": "Subir media",
-    "drop_file_to_upload": "Ingrese un archivo para subir",
-    "upload_file_to_continue": "Suba un archivo para continuar...",
-    "level_maker": "Editor de niveles",
-    "level_maker_description": "Crea tu propio nivel",
-    "level_name": "Nombre del nivel",
-    "level_description": "Descripción del nivel",
-    "level_stage": "Escenario del nivel",
-    "lawn_mower": "Cortadora de césped",
-    "level_music": "Música",
-    "level_has_sun_falling": "¿Dejar caer soles?",
-    "level_music_normal": "Normal",
-    "level_music_ultimate": "Último Batallón",
-    "level_music_minigame": "Minijuego",
-    "map_editor": "Editor de mapas",
-    "map_editor_horizontal_view": "Vista horizontal",
-    "map_editor_vertical_view": "Vista vertical",
-    "save_file": "Guardar archivo",
-    "map_cannot_be_loaded": "El mapa no pudo ser cargado",
-    "map_editor_description": "Edita o crea mapas de mundo",
-    "regular_wave": "Oleada básica",
-    "storm_event": "Evento de tormenta",
-    "low_tide": "Marea baja",
-    "sandstorm": "Tormenta de arena",
-    "snowstorm": "Tormenta de nieve",
-    "entry": "Entrada",
-    "column_start": "Comenzar en columna",
-    "column_end": "Terminar en columna",
-    "group_size": "Tamaño de grupo",
-    "delay_between_groups": "Retraso entre grupos",
-    "additional_plantfood": "Nutriente adicional",
-    "pick_a_zombie": "Seleccione un zombi",
-    "save": "Guardar",
-    "zombie": "Zombi",
-    "wave": "Oleada",
-    "plant": "Planta",
-    "grid_item": "Objeto",
-    "expand": "Expandir",
-    "edit": "Editar",
-    "delete": "Eliminar",
-    "start_message": "Mensaje al empezar oleada",
-    "count": "Contador",
-    "detail": "Detalle",
-    "done": "Hecho",
-    "successfully_applied_your_configuration": "¡Ajuste aplicado correctamente!",
-    "confirmation": "Confirmar",
-    "confirm_apply_configuration": "¿Está seguro de querer aplicar este ajuste?",
-    "backup_configuration": "Guardar ajustes",
-    "backup_configuration_description": "¡Guarda tus ajustes para no perderlos!",
-    "upload_configuration": "Subir ajustes",
-    "save_configuration": "Guardar ajustes",
-    "load_configuration": "Cargar ajustes",
-    "apply_configuration": "Aplicar ajustes",
-    "info": "Info.",
-    "configuration_has_been_loaded": "Los ajustes fueron cargados",
-    "miscellaneous": "Misceláneos",
-    "parachute_rain": "Lluvia de paracaídas",
-    "value_cannot_be_null": "El valor no puede ser nulo",
-    "value_must_be_an_integer": "El valor debe ser un entero",
-    "value_must_be_an_float": "El valor debe ser un decimal",
-    "value_cannot_be_empty": "El valor no puede estar vacío",
-    "fall_time": "Tiempo de caída",
-    "spider_rain": "Enjambre de robots",
-    "raiding_party": "Incursión",
-    "swashbuckler_count": "Número de espadachines",
-    "frost_wind": "Viento helado",
-    "direction": "Dirección",
-    "row": "Fila",
-    "add_new_frost_wind": "Agregar nuevo viento helado",
-    "left": "Izquierda",
-    "right": "Derecha",
-    "save_finish": "Guardar",
-    "add": "Agregar",
-    "close": "Cerrar",
-    "dino_wave": "Oleada del dinosaurio",
-    "dino_type": "Tipo de dinosario",
-    "tidal_change": "Cambio de marea",
-    "tide_coordinate": "Coordinar marea",
-    "jam_wave": "Interferencia de la oleada",
-    "notification_event": "Evento de notificación",
-    "loading_error": "Error al cargar",
-    "please_configure_resource_location": "Configure la localización del Resource en ajustes para cargar este módulo",
-    "resource_location": "Localización de Resource",
-    "portal_wave": "Oleada del portal",
-    "portal_column": "Columna del portal",
-    "portal_row": "Fila del portal",
-    "portal_type": "Tipo de portal",
-    "pick_a_portal": "Seleccione un portal",
-    "ground_spawn": "Invocar desde el suelo",
-    "necromancy": "Nigromancia",
-    "zombie_spawn_wait_time": "Tiempo de espera después de ser invocados",
-    "suppress_action_if_no_grid_items_found": "No activar si no hay objetos encontrados",
-    "grid_type": "Tipo de objeto",
-    "message": "Mensaje",
-    "notification": "Notificación",
-    "version": "Versión",
-    "batch_function": "Función múltiple"
+	"@@locale": "es",
+	"author_of_this_locale": "JNR",
+	"en": "English",
+	"vi": "Tiếng Việt",
+	"es": "Español",
+	"ru": "Pусский",
+	"not_specified": "No especificado",
+	"default_setting": "Ajustes visuales",
+	"theme": "Tema",
+	"language": "Lenguaje",
+	"author": "Traductor",
+	"application_setting": "Ajustes de la herramienta",
+	"send_notification": "Recibir notificaciones",
+	"storage_permission": "Uso del almacenamiento",
+	"granted": "Permitido",
+	"denied": "No permitido",
+	"toolchain": "Carpeta de herramientas",
+	"upload_directory": "Cambiar directorio",
+	"enable": "Activar",
+	"disable": "Desactivar",
+	"okay": "Aceptar",
+	"system": "Sistema",
+	"light": "Claro",
+	"dark": "Oscuro",
+	"js_page": "Scripts de JS",
+	"home": "Inicio",
+	"settings": "Ajustes",
+	"shell": "Shell",
+	"shell_description": "Útil para procesar archivos",
+	"method_picker": "Seleccionar método",
+	"method_picker_description": "Seleccione un método",
+	"js_execute": "Ejecutar JS",
+	"js_execute_description": "Ejecuta scripts de JS",
+	"animation_viewer": "Visor de animaciones",
+	"animation_viewer_description": "Previsualiza animaciones que el juego reproducirá",
+	"toolchain_is_invalid": "La carpeta de herramientas no es válida",
+	"user_provided": "EL usuario ingresó:",
+	"execute_again": "¿Ejecutar de nuevo?",
+	"yes": "Sí",
+	"no": "No",
+	"elapsed_time": "Tiempo transcurrido",
+	"upload_file": "Subir archivo",
+	"recent_files": "Archivos recientes",
+	"cancel": "Cancelar",
+	"invalid_request": "Solicitud no válida",
+	"shell_request_behavior": "Espere a que se terminen los procesos",
+	"android_request": "Solicitud de Android",
+	"android_storage_access_permission_required": "Se requiere permiso de almacenamiento para crear o abrir archivos",
+	"go_to_settings": "Ir a Ajustes",
+	"shell_has_finished": "Se ha finalizado el proceso, ¡regrese a la aplicación!",
+	"use": "Usar",
+	"select_option": "Opciones",
+	"submit": "Subir",
+	"x": "X",
+	"y": "Y",
+	"label": "Etiqueta",
+	"media": "Media",
+	"sprite": "Sprite",
+	"image": "Imagen",
+	"upload_media": "Subir media",
+	"drop_file_to_upload": "Arrastre un archivo para subir...",
+	"upload_file_to_continue": "Suba un archivo para continuar...",
+	"level_maker": "Editor de niveles",
+	"level_maker_description": "Crea tu propio nivel",
+	"level_name": "Nombre",
+	"level_description": "Descripción",
+	"level_stage": "Escenario",
+	"lawn_mower": "Cortadora de césped",
+	"level_music": "Música",
+	"level_has_sun_falling": "¿Dejar caer soles?",
+	"level_music_normal": "Normal",
+	"level_music_ultimate": "Último Batallón",
+	"level_music_minigame": "Minijuego",
+	"map_editor": "Editor de mapas",
+	"map_editor_horizontal_view": "Vista horizontal",
+	"map_editor_vertical_view": "Vista vertical",
+	"save_file": "Guardar archivo",
+	"map_cannot_be_loaded": "El mapa no pudo ser cargado",
+	"map_editor_description": "Edita o crea mapas de mundo",
+	"regular_wave": "Oleada básica",
+	"storm_event": "Evento de tormenta",
+	"low_tide": "Marea baja",
+	"sandstorm": "Tormenta de arena",
+	"snowstorm": "Tormenta de nieve",
+	"entry": "Entrada",
+	"column_start": "Columna de inicio",
+	"column_end": "Columna de fin",
+	"group_size": "Tamaño de grupo",
+	"delay_between_groups": "Retraso entre grupos",
+	"additional_plantfood": "Nutriente adicional",
+	"pick_a_zombie": "Seleccione un zombi",
+	"save": "Guardar",
+	"zombie": "Zombi",
+	"wave": "Oleada",
+	"plant": "Planta",
+	"grid_item": "Objeto",
+	"expand": "Expandir",
+	"edit": "Editar",
+	"delete": "Eliminar",
+	"start_message": "Mensaje al empezar oleada",
+	"count": "Contador",
+	"detail": "Detalle",
+	"done": "Hecho",
+	"successfully_applied_your_configuration": "¡Ajustes aplicados correctamente!",
+	"confirmation": "Confirmar",
+	"confirm_apply_configuration": "¿Está seguro de querer aplicar estos ajustes?",
+	"backup_configuration": "Guardar ajustes",
+	"backup_configuration_description": "¡Guarda tus ajustes para no perderlos!",
+	"upload_configuration": "Subir ajustes",
+	"save_configuration": "Guardar ajustes",
+	"load_configuration": "Cargar ajustes",
+	"apply_configuration": "Aplicar ajustes",
+	"info": "Info.",
+	"configuration_has_been_loaded": "Los ajustes fueron cargados",
+	"miscellaneous": "Otros",
+	"parachute_rain": "Lluvia de paracaídas",
+	"value_cannot_be_null": "El valor no puede ser nulo",
+	"value_must_be_an_integer": "El valor debe ser un entero",
+	"value_must_be_an_float": "El valor debe ser un decimal",
+	"value_cannot_be_empty": "El valor no puede estar vacío",
+	"fall_time": "Tiempo de caída",
+	"spider_rain": "Enjambre de robots",
+	"raiding_party": "Incursión",
+	"swashbuckler_count": "Número de espadachines",
+	"frost_wind": "Viento helado",
+	"direction": "Dirección",
+	"row": "Fila",
+	"add_new_frost_wind": "Agregar nuevo viento helado",
+	"left": "Izquierda",
+	"right": "Derecha",
+	"save_finish": "Guardar",
+	"add": "Agregar",
+	"close": "Cerrar",
+	"dino_wave": "Oleada de dinosaurio",
+	"dino_type": "Tipo de dinosario",
+	"tidal_change": "Cambio de marea",
+	"tide_coordinate": "Posición de la marea",
+	"jam_wave": "Interferencia de la oleada",
+	"notification_event": "Notificación de evento",
+	"loading_error": "Error al cargar",
+	"please_configure_resource_location": "Agregue el directorio de los recursos en ajustes",
+	"resource_location": "Directorio de los recursos",
+	"portal_wave": "Oleada del portal",
+	"portal_column": "Columna del portal",
+	"portal_row": "Fila del portal",
+	"portal_type": "Tipo de portal",
+	"pick_a_portal": "Seleccione un portal",
+	"ground_spawn": "Invocación bajo tierra",
+	"necromancy": "Nigromancia",
+	"zombie_spawn_wait_time": "Tiempo de espera después de ser invocados",
+	"suppress_action_if_no_grid_items_found": "No activar si no hay objetos encontrados",
+	"grid_type": "Tipo de objeto",
+	"message": "Mensaje",
+	"notification": "Notificación",
+	"version": "Versión",
+	"batch_function": "Función múltiple",
+	"cannot_load_giftbox_world_map": "No se pudo cargar el regalo (giftbox_world_map)",
+	"cannot_load_level_node": "No se pudo cargar el nodo de nivel (level_node)",
+	"cannot_load_level_node_gargantuar": "No se pudo cargar el nodo de nivel Zombistein (level_node_gargantuar)",
+	"cannot_load_level_node_minigame": "No se pudo cargar el nodo de nivel Mini juego (level_node_minigame)",
+	"cannot_load_map_path": "No se pudo cargar el camino de mapa (map_path)",
+	"cannot_load_yeti_icon": "No se pudo cargar el ícono del Yeti (yeti_icon)",
+	"cannot_load_zomboss_node_hologram": "No se pudo cargar el holograma de Dr. Zombi (zomboss_node_hologram)",
+	"cannot_load_buttons_hud_back_normal": "No se pudo cargar el botón de regresar (buttons_hud_back_normal)",
+	"cannot_load_free_pinata": "No se pudo cargar la piñata gratis (free_pinata)",
+	"cannot_load_free_pinata_dust": "No se pudo cargar la piñata gratis destruida (free_pinata_dust)",
+	"cannot_load_buttons_hud_back_selected": "No se pudo cargar el botón de regresar presionado (buttons_hud_back_selected)",
+	"cannot_load_missing_artpiece": "No se pudo cargar la pieza de arte faltante (missing_artpiece)",
+	"cannot_load_missing_artpiece_anim": "No se pudo cargar la animación de la pieza de arte faltante (missing_artpiece_anim)",
+	"cannot_load_space_dust": "No se pudo cargar el polvo del espacio (space_dust)",
+	"cannot_load_space_spiral": "No se pudo cargar el espiral del espacio (space_spiral)",
+	"cannot_load_ready_seedbank": "No se pudo cargar el paquete de semillas común (ready)",
+	"cannot_load_plant_seedbank": "No se pudo cargar la planta del paquete de semillas",
+	"cannot_find_world": "No se pudo encontrar el mundo",
+	"worldmap_loaded": "Mapa cargado",
+	"section": "Sección",
+	"section_description": "Seleccionar objetos en la sección",
+	"island_pieces": "Piezas",
+	"island_pieces_description": "Abre la lista de piezas y colócalos en esta sección",
+	"animation_pieces": "Animaciones",
+	"animation_pieces_description": "Abre la lista de animaciones y colócalos en esta sección",
+	"events": "Eventos",
+	"events_description": "Abre la lista de eventos y colócalos en esta sección",
+	"map_editor_setting": "Ajustes del editor",
+	"map_editor_setting_description": "Cambiar las propiedades del editor",
+	"palette": "Paleta de colores",
+	"palette_description": "Cambiar el color del fondo",
+	"loading": "Cargando",
+	"map_settings": "Ajustes del mapa",
+	"width": "Ancho",
+	"height": "Altura",
+	"open": "Abrir",
+	"open_description": "Abre un mapa",
+	"save_description": "Guarda el mapa actual",
+	"eraser": "Borrador",
+	"eraser_description": "Remueve objetos de la sección",
+	"pan_tool": "Mover",
+	"pan_tool_description": "Mueve la vista del mapa",
+	"resizer": "Cambiar tamaño",
+	"resizer_description": "Cambiar el tamaño del mapa",
+	"position_x": "Posición X",
+	"position_y": "Posición Y",
+	"world_id": "ID del mundo",
+	"res_id": "ID del res",
+	"world_name": "Nombre del mundo",
+	"piece_config": "Ajustes de la pieza",
+	"type": "Tipo",
+	"id": "ID",
+	"scale_x": "Escala X",
+	"scale_y": "Escala Y",
+	"layer": "Capa",
+	"parallax": "Paralaje",
+	"rate": "Tasa",
+	"piece_art_flip": "Voltear pieza",
+	"angle": "Ángulo",
+	"event_config": "Ajustes de evento",
+	"name": "Nombre",
+	"parent": "Pariente",
+	"unlocked_from": "Desbloquear desde",
+	"auto_visible": "Auto-visible",
+	"event_border": "Borde de eventos",
+	"animation_piece_border": "Borde de animaciones",
+	"level_finished": "Niveles completados",
+	"map_grid": "Cuadrícula",
+	"clear": "Borrar",
+	"clear_description": "Borra todo el mapa",
+	"config": "Ajustes",
+	"config_description": "Configura el editor con tus ajustes",
+	"play_single_animation_frame": "Reproducir un cuadro animado",
+	"mute_audio": "Silenciar audio",
+	"filter_quality": "Calidad",
+	"world_name_cannot_be_none": "El nombre del mapa no puede estar vacío",
+	"worldmap_saved": "Mapa guardado",
+	"map_bounding_resize": "Cambiar los límites del mapa",
+	"worldmap_has_been_changed": "El mapa ha sido cambiado",
+	"map_editor_config": "Ajustes del editor de mapas",
+	"config_saved": "Ajustes guardados",
+	"confirm_delete": "Eliminar",
+	"confirm_delete_description": "¿Estás seguro de eliminar todo?",
+	"continue_progress": "No eliminar",
+	"worldmap_has_been_cleared": "El mapa ha sido borrado",
+	"download_script": "Descargar Script",
+	"download_script_description": "Descarga un Script en tu dispositivo",
+	"unzip_file_failed": "Fallo al descomprimir archivo",
+	"error": "Error",
+	"ok": "OK",
+	"script_has_been_downloaded": "El Script ha sido descargado",
+	"change_position_value": "Cambiar posición del valor",
+	"zoom_out": "Alejar",
+	"backward": "Retroceder",
+	"play": "Reproducir",
+	"stop": "Detener",
+	"forward": "Adelantar",
+	"zoom_in": "Acercar"
 }
