--- a/Script/Setting/Language/en-us.json
+++ b/Script/Setting/Language/en-us.json
@@ -761,5 +761,6 @@
 	"js.command_line_has_finished": "Command line has been finished!",
 	"js.host": "Host: {}",
 	"script.input_any_path_to_continue_or_provide_an_empty_string_to_exit": "Input any path to continue, or you can provide an empty string to exit immediately",
-	"script.input_phase_stopped": "User has stopped provide argument, now begin processing phase"
+	"script.input_phase_stopped": "User has stopped provide argument, now begin processing phase",
+	"popcap.resource_group.group_cannot_be_null_in_resource_group": "Property \"groups\" cannot be null in resource group"
 }
